@@ -2,7 +2,11 @@ New in v1.1.1 (????/??/??)
 --------------------------
 
 rdiff-backup now writes SHA1 sums into its mirror_metadata file for
-all regular files.
+all regular files, and checks them when restoring.
+
+Added two new comparison modes: full file (using the --compare-full or
+--compare-full-at-time) or by hash (--compare-hash and
+--compare-hash-at-time).
 
 Applied Alec Berryman's patch to update the no-compression regexp.
 
